created student search

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">StudentSearch</string>
+    <string name="overview">Overview</string>
+    <string name="Dummy">Dummy</string>
+    <string name="Aboutyourself">About the person</string>
+    <string name="Achievements">Accomplishments</string>
+    <string name="contactinfo">Contact Info</string>
+    <string name="Emailedittext">Email</string>
+    <string name="phonenoEdittext">Phone no.</string>
+    <string name="linkedin">Linkedin</string>
 </resources>
